# banking-agent-ai

./: .env.example  .gitignore  README.md  implementation_plan.md  start-dev.ps1  system_architecture_and_analysis.md
backend/: .dockerignore  Dockerfile  config.py  logging_config.py  main.py  pyproject.toml  test_rag.py  verify_batch.py
backend/agent/: __init__.py  graph.py  llm_factory.py  message_generator.py  mock_agent.py  prompts.py  scoring.py  state.py  tools.py
backend/api/: credit_score.py  customers.py  products.py  schemas.py  transactions.py
backend/data/: database.py  models.py  seed.py
backend/knowledge_base/: eligibility_criteria.md  product_catalog.md  rbi_rules_and_regulations.md  special_offers_and_edge_cases.md
backend/rag/: __init__.py  embeddings.py  ingest.py  retriever.py  vector_store.py
deploy/: docker-compose.yml
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  CoreMetrics.jsx  MessageBubble.jsx  Sidebar.jsx  ToolCallCard.jsx
frontend/src/components/layout/: AppLogo.jsx  Sidebar.jsx
frontend/src/features/auth/components/: Login.jsx  Signup.jsx
frontend/src/features/chat/components/: ChatInterface.jsx  MessageBubble.jsx  ToolCallCard.jsx
frontend/src/features/chat/hooks/: useChat.js
frontend/src/features/dashboard/components/: AgentTools.jsx  ApiEndpoints.jsx  CustomerDirectory.jsx  ProductCatalog.jsx
frontend/src/hooks/: useChat.js
