[project]
name = "banking-crm-agent"
version = "0.1.0"
description = "Conversation-based Agentic AI system for Banking CRM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    # Database
    "sqlalchemy>=2.0.35",
    # AI / Agent
    "langchain>=0.3.7",
    "langchain-google-genai>=2.0.7",
    "langgraph>=0.2.53",
    "langchain-core>=0.3.19",
    # HTTP client (for agent tools calling APIs)
    "httpx>=0.27.0",
    # Data generation
    "faker>=30.0.0",
    # Schema validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Environment
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
