[project]
name = "banking-crm-agent"
version = "0.1.0"
description = "Conversation-based Agentic AI system for Banking CRM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    # Database
    "sqlalchemy>=2.0.35",
    # AI / Agent
    "langchain>=0.3.7",
    "langchain-google-genai>=2.0.7",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.53",
    "langchain-core>=0.3.19",
    # RAG / Vector Store
    "chromadb>=0.5.0",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-huggingface>=0.2.0",
    "sentence-transformers>=3.0.0",
    # HTTP client (for agent tools calling APIs)
    "httpx>=0.27.0",
    # Data generation
    "faker>=30.0.0",
    # Schema validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Environment
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
